[package]
name = "adi-analytics-ingestion"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[workspace]

[[bin]]
name = "adi-analytics-ingestion"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Analytics core (for event types)
lib-analytics-core = { path = "../lib-analytics-core" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"
