[package]
name = "adi-auth-http"
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
authors = ["ADI Team"]
description = "HTTP API server for ADI Auth - email-based passwordless authentication"

[[bin]]
name = "adi-auth-http"
path = "src/main.rs"

[dependencies]
adi-auth-core = { path = "../adi-auth-core" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
