[package]
name = "adi-credentials-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "BSL-1.0"
description = "Secure credentials storage service for ADI platform"

# Standalone crate (not part of parent workspace)
[workspace]

[[bin]]
name = "adi-credentials-api"
path = "src/main.rs"

[[bin]]
name = "adi-credentials-migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Migrations
lib-migrations-core = { git = "https://github.com/adi-family/lib-migrations-core.git" }
lib-migrations-sql = { git = "https://github.com/adi-family/lib-migrations-sql.git" }

# Analytics
lib-analytics-core = { path = "../lib/lib-analytics-core" }

# HTTP utilities
lib-http-common = { path = "../lib/lib-http-common" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# Encryption
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
