[package]
name = "adi-embed-plugin"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "ADI Embed plugin providing text embedding services via fastembed/ONNX"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "4"
tracing = "0.1"
once_cell = "1.21"
directories = "5.0"
