[package]
name = "adi-linter-plugin"
version = "0.8.8"
edition = "2021"
license = "BSL-1.0"
description = "ADI Linter plugin providing CLI commands for code linting"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi = { path = "../lib-plugin-abi" }
adi-linter-core = { path = "../adi-linter-core" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
