[package]
name = "adi-llm-extract-plugin"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "Extract LLM-friendly documentation from ADI plugins"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi = { path = "../lib/lib-plugin-abi" }
lib-plugin-manifest = { path = "../lib/lib-plugin-manifest" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
