[package]
name = "embed-plugin"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "ADI Embed plugin providing text embedding services via fastembed/ONNX"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "4"
tracing = "0.1"
once_cell = "1.21"
directories = "5.0"

[package.metadata.plugin]
id = "adi.embed"
name = "ADI Embed"
type = "core"

[package.metadata.plugin.compatibility]
min_host_version = "0.8.0"

[[package.metadata.plugin.provides]]
id = "adi.embed"
version = "1.0.0"

[package.metadata.plugin.tags]
categories = ["embedding", "ml", "onnx", "fastembed"]
