[package]
name = "lib-cli-common"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
description = "Common CLI utilities for ADI tools"

[dependencies]
anyhow = "1.0"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
