[package]
name = "lib-client-asana"
version = "0.1.0"
edition = "2024"
license = "BSL-1.0"
description = "Asana API client library for ADI"
repository = "https://github.com/adi-family/cli/tree/main/crates/lib-client-asana"

[lib]
name = "lib_client_asana"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
