[package]
name = "lib-client-confluence"
version = "0.1.0"
edition = "2024"
license = "BSL-1.0"
description = "Confluence API client library for ADI"

[lib]
name = "lib_client_confluence"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
urlencoding = "2"
