[package]
name = "lib-client-google-auth"
version = "0.1.0"
edition = "2024"
license = "BSL-1.0"
description = "Google OAuth2 authentication library for ADI"

[lib]
name = "lib_client_google_auth"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs"] }
urlencoding = "2"
