[package]
name = "lib-client-google-drive"
version = "0.1.0"
edition = "2024"
license = "BSL-1.0"
description = "Google Drive API client library for ADI"

[lib]
name = "lib_client_google_drive"

[dependencies]
lib-client-google-auth = { path = "../lib-client-google-auth" }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
urlencoding = "2"
