[package]
name = "lib-client-slack"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "Slack API client library for ADI"
authors = ["ADI Team"]
keywords = ["slack", "api", "messaging", "chat"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/adi-family/lib-client-slack"
homepage = "https://adi.the-ihor.com"
documentation = "https://docs.rs/lib-client-slack"

[lib]
name = "lib_client_slack"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
