[package]
name = "lib-client-trello"
version = "0.1.0"
edition = "2024"
license = "BSL-1.0"
description = "Trello API client library for ADI"
repository = "https://github.com/adi-family/cli/tree/main/crates/lib-client-trello"

[lib]
name = "lib_client_trello"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
urlencoding = "2"
