[package]
name = "lib-llm-providers"
version = "0.1.0"
edition = "2021"
description = "LLM provider implementations and routing for adi-agent-loop"
license = "MIT"

[dependencies]
adi-agent-loop-core = { path = "../adi-agent-loop-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
thiserror = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
