[package]
name = "lib-tarminal-sync"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
